Updated the Z-push script installer to version 2.1.1-1788, phpMyAdmin to 4.1.6, MediaWiki to 1.22.2 and 1.19.11, LimeSurvey to 2.05, Magento to 1.8.1.0, WordPress to 3.8.1, FengOffice to 2.5.0.1, Revive Adserver to 3.0.2, Django to 1.6.1, Joomla to 3.2.1 and 2.5.17, PiWik to 2.0.3, ZenPhoto to 1.4.5.9, phpMyFAQ to 2.8.5, eXtplorer to 2.1.5, Drupal to 7.26 and 6.30, ownCloud to 6.0.1, Dolibarr to 3.4.2, WHMCS to 5.2.15, Coppermine to 1.5.26, DokuWiki to 2013-12-08, Moodle to 2.6.1, Pydio to 5.2.0, SMF to 2.0.7, and TikiWiki to 12.0.
Added SRV record support to the DNS Records page.
Added the Transfer Virtual Server page and transfer-domain API command for copying or moving a domain to another system running Virtualmin.
---- Changes since 4.05 ----
Updated the CMS Made Simple script installer to version 1.11.10, phpMyFAQ to 2.8.7, Pydio to 5.2.1, Joomla to 3.2.2 and 2.5.18, phpMyAdmin to 4.1.8, Mantis to 1.2.16, Django to 1.6.2, and Dolibarr to 3.5.0.
Added a script installer for Node.js version 0.10.25, and Ghost version 0.4.1.
Added an option to the restore process to delete files in an existing destination domain that were not included in the backup.
The port used in URLs can now be set independently of the actual port, so that URLs are correct when a reverse proxy is in use.
---- Changes since 4.06 ----
Updated the Node.js script installer to version 0.10.26, Pydio to 5.2.2, Zikula to 1.3.7, MediaWiki to 1.22.4, Feng Office to 2.5.1.2, Mantis to 1.2.17, PiWik to 2.1.0, ownCloud to 6.0.2, Dolibarr to 3.5.1, Joomla to 3.2.3 and 2.5.19, Moodle to 2.6.2, Revive AdServer to 3.0.3, eGroupWare to 1.8.006, and phpMyAdmin to 4.1.9.
Added Norwegian translation updates, thanks to Stein-Aksel Basma.
Aliases and redirects can now be separately enabled for the SSL and non-SSL websites of a virtual server.
The Change IP Addresses	page can now be used to update the external DNS address of multiple virtual servers, as well as the actual address.