@@ -34,6 +34,12 @@ are :
     will be copied from the old parent, but can subsequently be edited
     separately.<p>
 
+<dt><b>Changing the target of an alias</b>
+<dd>If the selected server is an alias of another server, this form can be used
+    to point it at a different target. Once the move is complete, web access to
+    the domain will return content from the new target, and email to the domain
+    will be forwarded to the new target's mailboxes.<p>
+
 </dl>
 
 <footer>
