@@ -4249,9 +4249,11 @@ move_ecannot=You are not allowed to move this server
 move_ecannot2=You are not allowed to move a domain to this server
 move_desc=This page allows you to convert this top-level server into a sub-server under an existing domain. Be careful, as this will result in the server's password, quota and bandwidth limits being lost, as they will now be inherited from the new parent.
 move_desc2=This page allows you to change the ownership of this sub-server so that it is controlled by the owner of another domain.
+move_desc3=This page allows you to change the destination of an alias server, so that any web or email access will be forwarded to the newly selected domain.
 move_header=Virtual server move options
 move_dom=Server to move
 move_target=New parent server
+move_target2=New alias target
 move_ok=Move Now
 move_err=Failed to move virtual server
 move_esame=Same parent server selected
